# codemagic-patch

./: .dockerignore  .env.selfhost.example  .gitignore  .prettierignore  LICENSE  LICENSING.md  README.md  docker-compose.dev.local.yml  docker-compose.dev.yml  docker-compose.selfhost.yml  eslint.config.mjs  package.json  tsconfig.base.json  tsconfig.json
cli/: README.md  package.json  tsconfig.json
cli/scripts/: build.mjs
cli/src/: artifactBuild.ts  authenticatedRequest.ts  baseBytecode.ts  branding.ts  browserOpen.ts  cli.ts  commandParsers.ts  commandSpecs.ts  commandTypes.ts  configStore.ts  credentialStore.ts  delivery.ts  external.d.ts  fingerprint.ts  help.ts  http.ts  localContext.ts  loginPkce.ts  loopbackLoginServer.ts  output.ts  packageHash.ts  problem-details.ts  projectAnalysis.ts  prompt.ts  runCli.ts  sdkConfig.ts  signing.ts  targetBinaryVersion.ts  version.ts  zip.ts
client/: .gitignore  CodemagicPatchClient.podspec  README.md  app.plugin.js  package.json  react-native.config.js  tsconfig.json  tsconfig.plugin.json
client/android/: CMakeLists.txt  build.gradle
client/android/src/main/cpp/: codemagic_patch_jni.cpp
client/android/src/main/java/io/codemagic/patch/: CodemagicPatch.kt  CodemagicPatchDownloader.kt  CodemagicPatchExecutors.kt  CodemagicPatchModule.kt  CodemagicPatchPackage.kt  CodemagicPatchPackageInstaller.kt  CodemagicPatchState.kt  CodemagicPatchStorage.kt  CodemagicPatchUtil.kt  NativeBundleOps.kt  NativeHashing.kt
client/ios/: CodemagicPatch.swift  CodemagicPatchBundleOps.h  CodemagicPatchBundleOps.mm  CodemagicPatchDownloader.swift  CodemagicPatchExecutors.swift  CodemagicPatchHashing.h  CodemagicPatchHashing.mm  CodemagicPatchModule.mm  CodemagicPatchModule.swift  CodemagicPatchPackageInstaller.swift  CodemagicPatchState.swift  CodemagicPatchStorage.swift  CodemagicPatchUtil.swift
client/src/: NativeCodemagicPatch.ts  checkForUpdate.ts  downloadUpdate.ts  events.ts  index.ts  installUpdate.ts  manifest.ts  notifyAppReady.ts  parser.ts  rollout.ts  runtime.ts  sync.ts  testing.ts  types.ts  version.ts
deploy/dev/: Caddyfile  Dockerfile.dashboard  Dockerfile.mock-github
deploy/local-dev/: Caddyfile
deploy/selfhost/: Caddyfile  Dockerfile.caddy  minio-bucket-policy.json
docs-site/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
docs-site/docs/: changelog.mdx  faq.mdx  intro.mdx  licensing.mdx  roadmap.mdx  troubleshooting.mdx
docs-site/scripts/: apply-llms-descriptions.mjs  llms-sidebar-sections.mjs  sync-md-to-static.mjs
docs-site/static/: search-index.json
docs-site/test/: resolveMarkdownPath.test.ts
examples/fixtures/: demo-example-app.sql
examples/github-actions/: release.yml
examples/local-dev/: seed.sql
examples/on-device-demo/: .yarnrc.yml  App.tsx  README.md  app.json  metro.config.js  package.json  tsconfig.json
infra/pulumi/: package.json
scripts/dev/: mock-github.ts  up.sh
scripts/local-eval/: common.sh  dashboard-local-login-smoke.sh  local-dev-smoke-second-release.sh  local-dev-smoke.sh  up.sh
scripts/selfhost/: backup.sh  common.sh  install.sh  restore.sh  seed-demo-data.sh  smoke.sh  upgrade.sh
server/: Dockerfile  package.json  tsconfig.build.json  tsconfig.json
shared/: LICENSE  package.json  tsconfig.build.json
web-dashboard/: eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+411 files in other folders)
